<resources>
    <string name="app_name">lesson3.1</string>
    <string name="hello_there">HELLO THERE,</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">FORGET PASSWORD?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="todo">TODO</string>
</resources>